--- a/settings.json
+++ b/settings.json
@@ -6,8 +6,8 @@
   },
 
   "server": {
-    "ip": "Arist0069.aternos.me", 
-    "port": 30198,   
+    "ip": "OurServer123-f5hp.aternos.me", 
+    "port": 21841,   
     "version": "1.12.1"   
   },
   
@@ -36,7 +36,7 @@
 
       "messages": [
         "I'm a regular player",
-        "Subscibe To Slobos!",
+        "I am created by Lalu",
         "I Like to Play Minecraft!"
       ]
     },
